--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : "so-lackingindeeps9291"
+  youtube          : "@so-lackingindeeps9291"
   zhihu            : # URL
 
 
