--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,14 @@
 # main links links
 main:
+  - title: "Animations"
+    url: /animations/
+
+  - title: "CV"
+    url: /cv/
+
+- title: "Students"
+  url: /students/
+
   - title: "Publications"
     url: /publications/
 
@@ -7,10 +16,4 @@ main:
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Animations"
-    url: /animations/
+    url: /teaching/
