--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,14 @@
-# main links links
-main:
-  - title: "Animations"
-    url: /animations/
-
-  - title: "CV"
-    url: /cv/
-
-- title: "Students"
-  url: /students/
-
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/
+- title: "Home"
+  url: "/"
+- title: "CV"
+  url: "/cv/"
+- title: "Publications"
+  url: "/publications/"
+- title: "Talks"
+  url: "/talks/"
+- title: "Teaching"
+  url: "/teaching/"
+- title: "Animations"
+  url: "/animations/"
+- title: "Former Students"
+  url: "/students/"
