--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,19 @@
-- title: "Home"
-  url: "/"
-- title: "CV"
-  url: "/cv/"
-- title: "Publications"
-  url: "/publications/"
-- title: "Talks"
-  url: "/talks/"
-- title: "Teaching"
-  url: "/teaching/"
-- title: "Animations"
-  url: "/animations/"
-- title: "Former Students"
-  url: "/students/"
+# main links
+main:
+  - title: "Animations"
+    url: /animations/
+
+  - title: "CV"
+    url: /cv/
+
+  - title: "Publications"
+    url: /publications/
+
+  - title: "Talks"
+    url: /talks/
+
+  - title: "Teaching"
+    url: /teaching/
+
+  - title: "Students"
+    url: /students/
