--- a/_config.yml
+++ b/_config.yml
@@ -332,6 +332,6 @@ tag_archive:
 # HTML Compression
 # - http://jch.penibelst.de/
 compress_html:
-  clippings: all
+  clippings: none
   ignore:
-    envs: development
+    envs: all
